[package]
name = "rsomics-fm-search"
version = "0.1.0"
description = "Exact substring search in FASTA using FM-index — count or locate pattern occurrences"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "rsomics-fm-search"
path = "src/main.rs"

[lib]
name = "rsomics_fm_search"
path = "src/lib.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.6" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-fm-index = { path = "../../../foundation/rsomics-fm-index", version = "0.1" }
clap.workspace = true
needletail = { version = "0.7", default-features = false }

[lints]
workspace = true
