[package]
name = "rsomics-fm-search"
version = "0.1.0"
description = "Exact substring search in FASTA using FM-index — count or locate pattern occurrences"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-world"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-fm-search"
path = "src/main.rs"

[lib]
name = "rsomics_fm_search"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-fm-index = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
needletail = { version = "0.7", default-features = false }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
[[bench]]
name = "bench"
harness = false
